# wmo

./: .gitignore  README.md  flake.nix  pyproject.toml  setup.cfg
.github/workflows/: test.yml
scripts/: create_db.sql  list_results.sql
tests/: test_checker.py  test_db.py  test_messenger.py  test_writer.py
wmo/: __init__.py  checker.py  cli.py  db.py  messenger.py  writer.py
