[tool.poetry]
name = "wmo"
version = "0.1.0"
description = "Website Monitor"
authors = ["David Wagner <wagdav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
kafka = "^1.3.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"

[tool.poetry.scripts]
check = 'wmo.__init__:check'
write = 'wmo.__init__:write'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
